# cpp-data-analytics-containers

./: CMakeLists.txt  LICENSE  README.md
data/: MOCK_DATA_CARS.csv
include/: containers.h
src/: CMakeLists.txt  containers.cpp  main.cpp
